<resources>
    <string name="app_name">MyCabinet</string>
    <string name="add">Add</string>
    <string name="add1">Take me to add a Food Item </string>
    <string name="add2">Take me to Food Section </string>
    <string name="enter_food_item_name">Enter food item name</string>
    <string name="enter_food_item_expiration_date">Enter food item expiration date</string>
    <string name="month">00</string>
    <string name="day">00</string>
    <string name="year">00</string>
    <string name="enter_food_notes">Enter food item notes</string>
    <string name="clear">Clear</string>
    <string name="settings">Settings</string>
    <string name="goToSettings">Go To Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>