<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6F2E5"
    android:clickable="true"
    tools:context=".MainActivity">

    <!--    <TextView-->
    <!--        android:id="@+id/textView"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Add your items to the Kitchen!"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->


    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->


    <EditText
        android:id="@+id/food_item"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:backgroundTint="#1F2023"
        android:hint="@string/enter_food_item_name"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="20dp"
        android:text="ADD YOUR FOOD ITEM"
        android:textColor="#8BC34A"
        android:textSize="30sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/food_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.619" />

    <EditText
        android:id="@+id/food_notes"
        android:layout_width="300dp"
        android:layout_height="77dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="184dp"
        android:autofillHints=""
        android:hint="@string/enter_food_notes"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/add_button"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/food_name_item"
        android:layout_width="48dp"
        android:layout_height="61dp"

        android:layout_marginStart="176dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:hint="@string/month"
        android:inputType="text"
        android:maxLines="1"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/food_name_item5"
        android:layout_width="48dp"
        android:layout_height="62dp"

        android:layout_marginTop="13dp"
        android:layout_marginEnd="252dp"
        android:autofillHints=""
        android:hint="@string/month"
        android:inputType="text"
        android:maxLines="1"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/food_name_item4"
        android:layout_width="48dp"
        android:layout_height="62dp"

        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:hint="@string/month"
        android:inputType="text"
        android:maxLines="1"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="97dp"
        android:layout_height="47dp"
        android:layout_marginEnd="166dp"
        android:layout_marginBottom="4dp"
        android:text="@string/add"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textColorHighlight="#8BC34A"
        android:textColorHint="#AAE7AC"
        android:textColorLink="#8BC34A"
        app:iconTint="#AAE7AC"
        app:layout_constraintBottom_toTopOf="@+id/clear_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginBottom="176dp"
        android:text="@string/clear"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textColorLink="#8BC34A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="167dp"
        android:layout_height="32dp"
        android:layout_marginEnd="547dp"
        android:layout_marginBottom="-35dp"
        android:text="Enter food item name"
        app:layout_constraintBottom_toTopOf="@+id/food_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/food_item" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="16dp"
        android:text="Enter the expiration date "
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:text="Enter the food item name"
        android:textColorLink="#8BC34A"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="151dp"
        android:layout_height="23dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:text="Enter additional notes"
        android:textSize="14sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_name_item5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="44dp"
        android:text="/"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/food_name_item4"
        app:layout_constraintStart_toEndOf="@+id/food_name_item" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="19dp"
        android:layout_height="57dp"
        android:layout_marginTop="13dp"
        android:text="/"
        android:textSize="50sp"
        app:layout_constraintStart_toEndOf="@+id/food_name_item4"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="19dp"
        android:layout_height="57dp"
        android:layout_marginTop="13dp"
        android:text="/"
        android:textSize="50sp"
        app:layout_constraintStart_toEndOf="@+id/food_name_item5"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>